[gd_scene load_steps=4 format=3 uid="uid://dqqm4htlk2dxs"]

[ext_resource type="Script" path="res://scenes/task_tracking_settings_menu.gd" id="2_50fxw"]
[ext_resource type="ButtonGroup" uid="uid://rtfa2yhtpxlw" path="res://gui/task_tracking/task_new_checkbox_options_button_group.tres" id="5_pw0kc"]
[ext_resource type="PackedScene" uid="uid://b2gi1xlrdmw1p" path="res://gui/task_tracking/database_manager/database_manager.tscn" id="8_ru03e"]

[node name="TaskTrackingSettings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelContainer_Background"
script = ExtResource("2_50fxw")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Center"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Center/PanelContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TaskSettingsTitle" type="Label" parent="Center/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_type_variation = &"Label_Title_Secondary"
text = "Task Settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Center/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
columns = 2

[node name="DefaultDataPanelContainer" type="PanelContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer"]
layout_mode = 2
theme_type_variation = &"PanelContainer_Tertiary"

[node name="DefaultDataVBox" type="VBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DefaultDataPanelContainer"]
layout_mode = 2

[node name="DefaultDataLabel" type="Label" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
layout_mode = 2
theme_type_variation = &"Label_Large"
text = "Default Data"
horizontal_alignment = 1

[node name="SetDefaultDataButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Button_Medium"
text = "Set Current Data as Default Data"

[node name="DefaultDataDisplayButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"Button_Medium"
disabled = true
toggle_mode = true
text = "Data Not Set"

[node name="AutoLoadCheckButton" type="CheckButton" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"CheckButton_Medium"
text = "Auto Load Default Data (Off)"

[node name="NewCheckboxOptionsPanelContainer" type="PanelContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer"]
layout_mode = 2
theme_type_variation = &"PanelContainer_Tertiary"

[node name="NewCheckboxOptionsVBox" type="VBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/NewCheckboxOptionsPanelContainer"]
layout_mode = 2

[node name="NewCheckboxOptionsLabel" type="Label" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox"]
layout_mode = 2
theme_type_variation = &"Label_Large"
text = "New Checkbox Options"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SetActiveButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
toggle_mode = true
button_group = ExtResource("5_pw0kc")
text = "Set to Active"

[node name="SetExpiredButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
toggle_mode = true
button_group = ExtResource("5_pw0kc")
text = "Set to Expired"

[node name="SetAssignedButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/NewCheckboxOptionsPanelContainer/NewCheckboxOptionsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
toggle_mode = true
button_group = ExtResource("5_pw0kc")
text = "Set Active & Assigned Profile"

[node name="DeletionPanelContainer" type="PanelContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer"]
layout_mode = 2
theme_type_variation = &"PanelContainer_Tertiary"

[node name="DeletionVBox" type="VBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer"]
layout_mode = 2

[node name="DeletionLabel" type="Label" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
layout_mode = 2
theme_type_variation = &"Label_Large"
text = "Profile and Data Deletion"
horizontal_alignment = 1

[node name="DeletionSafetyCheckButton" type="CheckButton" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"CheckButton_Medium"
text = "Danger Buttons Disarmed"

[node name="RemoveProfileButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
disabled = true
text = "Remove Profile from User List"

[node name="PurgeProfileDataButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Button_Medium"
disabled = true
text = "Purge Profile Data from Task Sheet"

[node name="ResetCheckboxPanelContainer" type="PanelContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Panel_Container_Secondary"

[node name="MarginContainer" type="MarginContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer"]
layout_mode = 2

[node name="ResetCheckboxesButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Button_Medium"
disabled = true
text = "Reset Current Checkboxes"

[node name="HBoxContainer" type="HBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetCheckboxesSectionOptionButton" type="OptionButton" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
alignment = 1
item_count = 5
selected = 0
popup/item_0/text = "All Sections"
popup/item_0/id = 0
popup/item_1/text = "Yearly Only"
popup/item_1/id = 1
popup/item_2/text = "Monthly Only"
popup/item_2/id = 2
popup/item_3/text = "Weekly Only"
popup/item_3/id = 3
popup/item_4/text = "Daily Only"
popup/item_4/id = 4

[node name="ResetCheckboxesMonthOptionButton" type="OptionButton" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
alignment = 1
item_count = 13
selected = 0
popup/item_0/text = "All Months"
popup/item_0/id = 0
popup/item_1/text = "January"
popup/item_1/id = 1
popup/item_2/text = "February"
popup/item_2/id = 2
popup/item_3/text = "March"
popup/item_3/id = 3
popup/item_4/text = "April"
popup/item_4/id = 4
popup/item_5/text = "May"
popup/item_5/id = 5
popup/item_6/text = "June"
popup/item_6/id = 6
popup/item_7/text = "July"
popup/item_7/id = 7
popup/item_8/text = "August"
popup/item_8/id = 8
popup/item_9/text = "September"
popup/item_9/id = 9
popup/item_10/text = "October"
popup/item_10/id = 10
popup/item_11/text = "November"
popup/item_11/id = 11
popup/item_12/text = "December"
popup/item_12/id = 12

[node name="DeleteTaskSheetButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
disabled = true
text = "Delete Task Sheet Data"

[node name="OtherOptionsPanelContainer" type="PanelContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer"]
layout_mode = 2
theme_type_variation = &"PanelContainer_Tertiary"

[node name="OtherOptionsVBox" type="VBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer"]
layout_mode = 2

[node name="OtherOptionsLabel" type="Label" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox"]
layout_mode = 2
theme_type_variation = &"Label_Large"
text = "Other Options"
horizontal_alignment = 1

[node name="RegenProfilesButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
text = "Restore Profiles
(from Checkboxes)"

[node name="UnloadCurrentDataButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
text = "Unload Current Data"

[node name="HBoxContainer" type="HBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Label_Medium"
text = "Description Preview Length"

[node name="DescriptionPreviewLengthSpinBox" type="SpinBox" parent="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
min_value = 6.0
value = 50.0
rounded = true
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Center/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="ResetDefaultSettingsButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Button_Medium"
text = "Reset Default Settings"

[node name="MenuBackButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Button_Medium"
text = "to Task Menu"

[node name="SheetsBackButton" type="Button" parent="Center/PanelContainer/MarginContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
text = "to Task Sheets"

[node name="DeletionBackgroundPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"PanelContainer_Red_Transparency"

[node name="DeletionCenterContainer" type="CenterContainer" parent="DeletionBackgroundPanelContainer"]
layout_mode = 2

[node name="DeletionPanelContainer" type="PanelContainer" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer"]
layout_mode = 2
theme_type_variation = &"Panel_Container_Secondary"

[node name="DeletionVBox" type="VBoxContainer" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer"]
layout_mode = 2
alignment = 1

[node name="DeletionLabel" type="Label" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"Label_Title_Secondary"
text = "Delete"
horizontal_alignment = 1

[node name="DeletionGridContainer" type="GridContainer" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 6

[node name="DeletionBackButton" type="Button" parent="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox"]
layout_mode = 2
theme_type_variation = &"Button_Large"
text = "Back"

[node name="DataManager" parent="." instance=ExtResource("8_ru03e")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox/SetDefaultDataButton" to="." method="_on_set_default_data_button_pressed"]
[connection signal="toggled" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DefaultDataPanelContainer/DefaultDataVBox/AutoLoadCheckButton" to="." method="_on_auto_load_check_button_toggled"]
[connection signal="toggled" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/DeletionSafetyCheckButton" to="." method="_on_deletion_safety_check_button_toggled"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/RemoveProfileButton" to="." method="_on_remove_profile_button_pressed"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/PurgeProfileDataButton" to="." method="_on_purge_profile_data_button_pressed"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer/VBoxContainer/ResetCheckboxesButton" to="." method="_on_reset_checkboxes_button_pressed"]
[connection signal="item_selected" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ResetCheckboxesSectionOptionButton" to="." method="_on_reset_checkboxes_section_option_button_item_selected"]
[connection signal="item_selected" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/ResetCheckboxPanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ResetCheckboxesMonthOptionButton" to="." method="_on_reset_checkboxes_month_option_button_item_selected"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/DeletionPanelContainer/DeletionVBox/DeleteTaskSheetButton" to="." method="_on_delete_task_sheet_button_pressed"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox/RegenProfilesButton" to="." method="_on_regen_profiles_button_pressed"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox/UnloadCurrentDataButton" to="." method="_on_unload_current_data_button_pressed"]
[connection signal="value_changed" from="Center/PanelContainer/MarginContainer/VBox/GridContainer/OtherOptionsPanelContainer/OtherOptionsVBox/HBoxContainer/DescriptionPreviewLengthSpinBox" to="." method="_on_description_preview_length_spin_box_value_changed"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/HBoxContainer/ResetDefaultSettingsButton" to="." method="_on_reset_default_settings_button_pressed"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/HBoxContainer/MenuBackButton" to="." method="_on_menu_back_button_pressed"]
[connection signal="pressed" from="Center/PanelContainer/MarginContainer/VBox/HBoxContainer/SheetsBackButton" to="." method="_on_sheets_back_button_pressed"]
[connection signal="pressed" from="DeletionBackgroundPanelContainer/DeletionCenterContainer/DeletionPanelContainer/DeletionVBox/DeletionBackButton" to="." method="_on_deletion_back_button_pressed"]
